FIX: sms page dropdown overflow scroll

--- a/src/assets/styles/dropdown-reg.scss
+++ b/src/assets/styles/dropdown-reg.scss
@@ -21,11 +21,6 @@
 		}
 	}
 
-	&__wrapper {
-		overflow: auto;
-		max-height: 220px;
-	}
-
 	&__trigger {
 		display: flex;
 		align-items: center;
